--- a/public/views/home.html
+++ b/public/views/home.html
@@ -100,6 +100,15 @@
                 <li><button class="userBtn" value="a18">a18</button></li>
                 <li><button class="userBtn" value="a19">a19</button></li>
                 <li><button class="userBtn" value="a20">a20</button></li>
+                <li><button class="userBtn" value="a21">a21</button></li>
+                <li><button class="userBtn" value="a22">a22</button></li>
+                <li><button class="userBtn" value="a23">a23</button></li>
+                <li><button class="userBtn" value="a24">a24</button></li>
+                <li><button class="userBtn" value="a25">a25</button></li>
+                <li><button class="userBtn" value="a26">a26</button></li>
+                <li><button class="userBtn" value="a27">a27</button></li>
+                <li><button class="userBtn" value="a28">a28</button></li>
+                <li><button class="userBtn" value="a29">a29</button></li>
             </ul>
             
         </div>   
