--- a/public/views/home.html
+++ b/public/views/home.html
@@ -27,14 +27,13 @@
             padding: 5px 5px;
         }
         #videoBox {
-            display: grid;
+            display: inline-grid;
             grid-template-columns: auto auto auto;
         }
         /* #videoBox video {width: 100px; } */
         .multi-video {
             border: 1px solid black;
             margin: 2px;
-            padding: 5px 15px;
         }
         input[type=checkbox] {  
             display: none;  
