stream change test

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -112,8 +112,8 @@
                 <li><button class="userBtn" value="a28">a28</button></li>
                 <li><button class="userBtn" value="a29">a29</button></li>
             </ul>
-            
         </div>   
+        <button id="changeConfig">change</button>
         <div id="videoBox"></div>
         <div id="printBox"></div>
     </body>
