console for changeconfig

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -30,7 +30,7 @@
             display: inline-grid;
             grid-template-columns: auto auto auto;
         }
-        /* #videoBox video {width: 100px; } */
+        #videoBox video {width: 100%; }
         .multi-video {
             border: 1px solid black;
             margin: 2px;
