--- a/public/views/home.html
+++ b/public/views/home.html
@@ -83,6 +83,7 @@
     <body>
         <div id="user">
             <input type="checkbox" id="videoFlag" class="checkbox-style" /><label for="videoFlag">비디오</label>
+            <input type="checkbox" id="videoFlag" class="checkbox-style" /><label for="subscribeFlag">subscribe</label>
             <ul>
                 <li><button class="userBtn" value="a1">a1</button></li>
                 <li><button class="userBtn" value="a2">a2</button></li>
