--- a/public/views/home.html
+++ b/public/views/home.html
@@ -116,9 +116,12 @@
                 <li><button class="userBtn" value="a29">a29</button></li>
             </ul>
         </div>   
+        <canvas id="meter" width="500" height="50"></canvas>
         <div id="videoBox"></div>
         <div id="printBox"></div>
     </body>
+    <script type="text/javascript" src="../js/volume-meter.js"></script>
+    <script type="text/javascript" src="../js/temp.js"></script>
     <script type="text/javascript" src="../js/getStats.js"></script>
     <script type="text/javascript" src="../js/home.js"></script>
 </html>
