--- a/public/views/home.html
+++ b/public/views/home.html
@@ -116,7 +116,8 @@
                 <li><button class="userBtn" value="a29">a29</button></li>
             </ul>
         </div>   
-        <canvas id="meter" width="500" height="50"></canvas>
+        <!-- <canvas id="meter" width="500" height="50"></canvas> -->
+        <!-- <p id="speaking"></p> -->
         <div id="videoBox"></div>
         <div id="printBox"></div>
     </body>
