--- a/public/views/home.html
+++ b/public/views/home.html
@@ -121,8 +121,8 @@
         <div id="videoBox"></div>
         <div id="printBox"></div>
     </body>
-    <script type="text/javascript" src="../js/volume-meter.js"></script>
-    <script type="text/javascript" src="../js/temp.js"></script>
+    <!-- <script type="text/javascript" src="../js/volume-meter.js"></script> -->
+    <!-- <script type="text/javascript" src="../js/temp.js"></script> -->
     <script type="text/javascript" src="../js/getStats.js"></script>
     <script type="text/javascript" src="../js/home.js"></script>
 </html>
