--- a/public/views/home.html
+++ b/public/views/home.html
@@ -128,6 +128,6 @@
     </body>
 <!--    <script type="text/javascript" src="../js/volume-meter.js"></script>-->
 <!--    <script type="text/javascript" src="../js/temp.js"></script>-->
-<!--    <script type="text/javascript" src="../js/getStats.js"></script>-->
+    <script type="text/javascript" src="../js/getStats.js"></script>
     <script type="text/javascript" src="../js/home.js"></script>
 </html>
